@@ -1,7 +1,6 @@
 # Quickstart / Pull request review
 
-Below are the steps to checkout the code, optionally a specific branch, build, and then look at the current
-functionality.
+Below are the steps to checkout the code, optionally a specific branch, build, and then look at the current functionality.
 
 ## Clone the code
 
@@ -18,13 +17,14 @@ cd molgenis-emx
 git checkout <branch name here>
 ```
 
-Then you can either build + run the whole molgenis.jar, or use docker-compose to instantiate the backend and only run
-one app, described below. Or you can run it inside IntelliJ.
+Then you can either build + run the whole molgenis.jar, or use docker-compose to instantiate the backend and only run one app, described below. Or you can run
+it inside IntelliJ.
 
 ## Build whole system
 
 Requires [Postgresql 14](https://www.postgresql.org/download/) and java (we use
 [adopt OpenJDK 17](https://adoptium.net/)):
+Optionally also install python3 for [scripts](use_scripts_jobs.md) feature.
 
 On Linux/Mac this could go as follows (Windows users, please tell us if this works for you too):
 
@@ -44,8 +44,8 @@ On Linux/Mac this could go as follows (Windows users, please tell us if this wor
   ```
 
 **Start postgres using docker-compose**
-You can start postgres using `docker-compose`. The data will be mounted in a directory called `psql_data` where you
-start the docker-compose (default: repo root-directory)
+You can start postgres using `docker-compose`. The data will be mounted in a directory called `psql_data` where you start the docker-compose (default: repo
+root-directory)
 
 * Start postgres
   ```console
@@ -111,15 +111,19 @@ last updated 24 nov 2022
 
 ### Pre-commit hook
 
-We use pre-commit build hook in .git/hooks/pre-push to ensure we don't push stuff that breaks the build.
+We use `gradle checkFormat spotlessCheck` to verify code follows standard format. You can use pre-commit build hook in .git/hooks/pre-commit to ensure we don't
+push stuff that breaks the build. We have included two gradle task for this if you like.
+
+To only run the checks (which you could fix by running `gradle format spotlessApply`), you can add:
 
 ```
-./gradlew test --info
-RESULTS=$?
-if[$RESULTS -ne 0]; then
-    exit 1
-fi
-exit 0
+./gradlew installPreCommitGitFormatCheckHook
+```
+
+To automatically apply the formatting and update your commit, you can add:
+
+```
+./gradlew installPreCommitGitFormatApplyHook
 ```
 
 ### Running tests in intellij
@@ -128,7 +132,12 @@ To enable gradle to run tests you must set the test runner to gradle.
 
 Go to IntelliJ Preferences -> Build tools -> Gradle and then set Run tests using 'IntelliJ' (counter intuitive, don't choose gradle).
 
-See https://linked2ev.github.io/devsub/2019/09/30/Intellij-junit4-gradle-issue/ 
+See https://linked2ev.github.io/devsub/2019/09/30/Intellij-junit4-gradle-issue/
+
+To skip slow tests that are marked in junit @Tag('slow') switch from 'All in package' to 'tags' and set to '!slow' via the 'edit configuration' of your test runner in 'build configuration'
+
+When you get error "java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.util.Map java.util.Collections$UnmodifiableMap.m accessible: module java.base does not "opens java.util" to unnamed module @5cee5251"
+that is because you need JVM parameter '--add-opens=java.base/java.util=ALL-UNNAMED'
 
 ### Reset gradle cache/deamon
 
@@ -140,19 +149,18 @@ Sometimes it help to reset gradle cache and stop the gradle daemon
 
 ### Delete all schemas (destroys all your data!)
 
-If you want to delete all the MOLGENIS generated schemas, roles and users in the postgresql and return to clean state,
-run
+If you want to delete all the MOLGENIS generated schemas, roles and users in the postgresql and return to clean state, run
 ```gradle cleandb```
 
 ### Build+test drop/creates schemas in my database
 
-Build test ('gradle test') will create database schemas, users, roles and passwords. 
-If you don't like that than please consider to use a different database instance for 'test'.
-You can use environment variables MOLGENIS_POSTGRES_** for this.
-See [Installation guide](run).
+Build test ('gradle test') will create database schemas, users, roles and passwords. If you don't like that than please consider to use a different database
+instance for 'test'. You can use environment variables MOLGENIS_POSTGRES_** for this. See [Installation guide](run).
 
 ### VS code
 
 Some of us also develop using VS code:
+
 * It automatically will discover the gradle tasks
-* To enable autoformatting of java using spottless, install [spottles plugin](https://marketplace.visualstudio.com/items?itemName=richardwillis.vscode-spotless-gradle)
+* To enable autoformatting of java using spottless,
+  install [spottles plugin](https://marketplace.visualstudio.com/items?itemName=richardwillis.vscode-spotless-gradle)
